<resources>
    <string name="app_name">FQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_error_prompt">You have keyed in the wrong ID! Try again.</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="numOfPreorders">Number of Preorders</string>
    <string name="deadlineOfPreorders">Deadline of Preorders</string>
    <string name="stop_preorder">Stop Preorder</string>
    <string name="number_of_preorders">Number of Preorders:</string>
    <string name="time_left">Time left:</string>
    <string name="preorder_time_is_up">Preorder Time is Up!</string>
    <string name="you_can_continue_preparations">You can continue preparations.</string>
    <string name="preorder_number_is_reached">Preorder Number is Reached!</string>
    <string name="login_no_internet">Server not connected</string>
    <string name="preorder">Preorder</string>
    <string name="queue">Queue</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="sample_username">Username</string>
    <string name="sample_storename">Storename</string>
    <string name="currency">S$</string>
    <string name="no_content">No data retrieved</string>
    <string name="loading_food_list">Loading food...</string>

    <string-array name="numOfOrders">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

</resources>