<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fqBackgroundWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/store_pic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m200"
                android:background="@color/colorTertiary"
                android:contentDescription="TODO"
                android:onClick="changePic"
                app:srcCompat="@drawable/ic_plus" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/m60"
                android:layout_marginBottom="@dimen/m10"
                android:animateLayoutChanges="false"
                android:animationCache="false"
                android:background="@color/colorSecondary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/m10"
                android:paddingStart="@dimen/m60"
                android:paddingEnd="@dimen/m20">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/sample_storename"
                    android:textColor="@color/fqBackgroundWhite"
                    android:textColorLink="@color/fqBackgroundWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/edit"
                    android:textColor="@color/fqBackgroundWhite" />
            </LinearLayout>

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/m10"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_setting"
                android:drawablePadding="@dimen/m20"
                android:text="@string/settings"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/m10"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_help"
                android:drawablePadding="@dimen/m20"
                android:text="@string/help"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/fqBackgroundWhite" />

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/m10"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_menu"
                android:drawablePadding="@dimen/m20"
                android:onClick="viewMenu"
                android:text="@string/menu"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/fqBackgroundWhite" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.TabLayout
        android:id="@+id/fqTab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:background="@color/fqBackgroundWhite"
        android:foregroundTint="@color/colorTertiary"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorSecondary"
        app:tabBackground="@color/fqBackgroundWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/queue" />

        <android.support.design.widget.TabItem
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/preorder" />

        <android.support.design.widget.TabItem
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"/>
    </android.support.design.widget.TabLayout>

</RelativeLayout>
