<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueueMain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerv_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:padding="4dp"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.TabLayout
        android:id="@+id/fqTab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:background="@color/fqBackgroundWhite"
        android:foregroundTint="@color/colorTertiary"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorSecondary"
        app:tabBackground="@color/fqBackgroundWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/queue" />

        <android.support.design.widget.TabItem
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/preorder" />

        <android.support.design.widget.TabItem
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"/>
    </android.support.design.widget.TabLayout>
</RelativeLayout>